docs: update logstash